--- a/Project/Project/CSS layout/index.css
+++ b/Project/Project/CSS layout/index.css
@@ -18,7 +18,7 @@
   .sub {
     display: flex;
     flex-direction: column;
-    flex-direction: column-reverse;
+    /*flex-direction: column-reverse;*/
     justify-content: space-between;
   }
 
